xfsprogs-2.4.9 (03 May 2003)
	- Allow xfs_repair to run on read-only filesystems.

xfsprogs-2.4.8 (26 April 2003)
	- Rework configure.in to make use of shared macros.
	- Fix up #include lines to allow compilation of sources
	  with installed headers rather than local headers.
	- Fix botches in xfs_bmap shell script which prevented any
	  arguments being passed on to xfs_io (from Jan Derfinak).

xfsprogs-2.4.7 (22 April 2003)
	- Clarify XFS system call interfaces, fix up documentation.

xfsprogs-2.4.6 (11 April 2003)
	- Fix a bug in detection of "clean" and "error" states with
	  MD devices.
	- Fix configure tests that used AC_PATH_PROG incorrectly.
	- Add support for libedit, if libreadline is unavailable.
	- Fix the libxfs build on big endian platforms.
	- Sync up user/kernel source in libxfs and headers.

xfsprogs-2.4.5 (03 April 2003)
	- Sync up xfs_inode.c in libxfs.
	- Implement get_unaligned/put_unaligned in libxfs.

xfsprogs-2.4.4 (30 March 2003)
	- Correct display of imaxpct in mkfs.xfs output.
	- Portability changes; including some code to support use
	  of several tools on Mac OS X (for Russell), ditto for
	  FreeBSD (from Russell); also did a simplistic backport
	  to IRIX (for me), so that I can run purify on some of
	  the tools.
	- See doc/INSTALL for more details on this.
	- Sync up user/kernel source in libxfs and headers.
	- Fix up some warnings when compiling libxfs on big endian
	  platforms.
	- Fix a configure.in botch which resulted in libreadline
	  always being used even when it was not asked for.
	- Fixed the configure.in script so that if gettext disabled,
	  we don't check for the gettext tools (and no longer fails
	  if they were not found).
	- Added the ability to specify a different user and/or group
	  to install as (previously, and still by default, root/root
	  were always used here).

xfsprogs-2.4.3 (27 March 2003)
	- Cleanups to the build process, in particular the automatic